fix_messages.scss_&__name.text_align

--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -16,7 +16,7 @@
         justify-content: space-between;
         line-height: 20px;
         &__name {
-          text-align: start;
+          text-align: left;
           color: #ffffff;
         }
         &__icons {
